# protodrake

./: .bazelrc  README.md  WORKSPACE.bazel  test_aa_optimization_read_only.cc
include/: spline_optimization.h
path_optimization/: BUILD.bazel  demo.dmd.yaml  demo.py
src/: spline_optimization
tools/: BUILD.bazel  environ.bzl
urdfs/: aa.urdf  franka_ws.urdf
