workspace(name = "drake_external_examples")

# Before compiling this repository, you need to set which Drake sources to use:
#  export LOCAL_DRAKE_PATH=/home/user/stuff/drake

load("//tools:environ.bzl", "environ_repository")
environ_repository(name = "environ", vars = ["LOCAL_DRAKE_PATH"])
load("@environ//:environ.bzl", "LOCAL_DRAKE_PATH")
LOCAL_DRAKE_PATH or fail("Set LOCAL_DRAKE_PATH=... before building; see README")
local_repository(name = "drake", path = LOCAL_DRAKE_PATH)
load("@drake//tools/workspace:default.bzl", "add_default_workspace")
add_default_workspace()
